@@ -12,6 +12,19 @@
   width: 50%;
 }
 
+.query-table__panel {
+  .cr-panel-block;
+  padding: 0px;
+  align-items: flex-end !important;
+  justify-content: flex-end !important;
+  border: 1px solid @block-border;
+  margin-top: 0px !important; 
+}
+
+.table-detail.cr-panel-block {
+  margin-bottom: 5px !important; 
+}
+
 .table-detail__cell {
   width: 50%;
   padding: 0px 15px;
