@@ -127,6 +127,12 @@
     </div>
   </div>
 
+  <div class="query-table__panel">
+    <div id="execute-btn" class="cr-console-header__options__item--btn cr-button cr-button--console" ng-click="executeQuery(query)">
+      <div> QUERY TABLE </div>
+    </div>
+  </div>
+
   <div class="partitions" ng-show="renderPartitions">
     <div class="partitions__header cr-panel-block">
       <h2>
